Register Page (EDIT)

--- a/template/register.html
+++ b/template/register.html
@@ -96,7 +96,7 @@
 
     <div id="divbottom" >
         <center>
-            <input type="submit" class="btn btn-info" value="Submit Button">
+            <input type="submit" class="btn btn-info" value="Submit">
         </center>
     </div>    
 
