--- a/template/result.html
+++ b/template/result.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
@@ -8,11 +7,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -38,13 +32,7 @@
         <td></td>
           <td></td>
           <td></td>
-          <td> 
-          <form>
-          <div class="checkbox">
-        <label><input type="checkbox" value=""></label>
-        </div>
-        </form>
-        </td>
+          <td></td>
       </tr>
       <tr>
         <td></td>
@@ -52,11 +40,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td><form>
-          <div class="checkbox">
-        <label><input type="checkbox" value=""></label>
-        </div>
-        </form></td>
+        <td></td>
       </tr>
       <tr>
         <td></td>
@@ -64,12 +48,10 @@
         <td></td>
         <td></td>
         <td></td>
-        <td><form>
-          <div class="checkbox">
-        <label><input type="checkbox" value=""></label>
-        </div>
-        </form></td>
+        <td></td>
       </tr>
     </tbody>
   </table>
+    </body>
+    
 </div>
