Modify member (edit dropdown)

--- a/template/modifymember.html
+++ b/template/modifymember.html
@@ -18,17 +18,19 @@
         <legend>MODIFY MEMBER</legend>
 
             
-            <div class="dropdown" style="margin-left:80px; ">
-                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" >
-                    -- Select Member --
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a href="#">ชื่อคนในทีม1</a></li>
-                    <li><a href="#">ชื่อคนในทีม2</a></li>
-                    <li><a href="#">ชื่อคนในทีม3</a></li>
-                </ul>
-                
+        <div class="dropdown">
+            <button class="btn  dropdown-toggle" type="button" data-toggle="dropdown">
+                -- Select Member --
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#">ชื่อคนในทีม1</a></li>
+                <li><a href="#">ชื่อคนในทีม2</a></li>
+                <li><a href="#">ชื่อคนในทีม3</a></li>
+            </ul>
+
+        </div>
+          
                 <div id="divbottom">
                     <!--กด update จะไปหน้า modifymember_update-->
                     <input type="button" class="btn" value="Update" style="margin-right:80px; margin-top:150px;">
@@ -36,7 +38,7 @@
                     <input type="button" class="btn" value="Delete" style="margin-top:150px;"> 
 
                 </div>
-            </div>
+            
         
         
 
