--- a/template/export.html
+++ b/template/export.html
@@ -10,6 +10,7 @@
 
         <center>
             <div>
+                <!-- export excel file -->
                 <button type="button" class="btn">EXPORT</button>
             </div>
         </center>
