--- a/template/login.html
+++ b/template/login.html
@@ -3,10 +3,10 @@
         <form class="login-form" action="/">
             <div class="form-group log-form-grp">
                 <label for="usr">Username:</label>
-                <input type="text" class="form-control" id="usr" ng-model="username">
+                <input type="text" class="form-control" id="usr" ng-model="form.username">
 
                 <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd" ng-model="password"> <br />
+                <input type="password" class="form-control" id="pwd" ng-model="form.password"> <br />
 
                 <button type="button" class="btn btn-info" ng-click="submit()">Login</button>
                 <button type="button" class="btn btn-info" ng-click="goToRegister()">Register</button>
