--- a/template/view_day_off_request(approve).html
+++ b/template/view_day_off_request(approve).html
@@ -1,22 +1,9 @@
-﻿<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-   
-
-
-
-</head>
-<body>
-
-<div class="container">
+﻿<div class="container" ng-controller="viewRequestController" ng-init="getView()">
     <div>
         <fieldset class="group-approve">
-            <legend class="name-approve">VIEW DAY OFF REQUEST</legend></fieldset></div>
+            <legend class="name-approve">VIEW DAY OFF REQUEST</legend>
+        </fieldset>
+    </div>
   <table class="table table-bordered">
     <thead>
       <tr>
@@ -29,12 +16,12 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-          <td></td>
-          <td></td>
+      <tr ng-repeat="item in listRequest">
+        <td>{{item.reason}}</td>
+        <td>{{item.date_from}}</td>
+        <td>{{item.date_to}}</td>
+        <td>{{item.u_name}}</td>
+        <td>{{item.team_name}}</td>
           <td><form>
             <div class="checkbox" style="text-align:center;">
                 <label><input type="checkbox" value=""></label>
@@ -42,37 +29,11 @@
             </form>
           </td>
       </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td><form>
-            <div class="checkbox" style="text-align:center">
-                <label><input type="checkbox" value=""></label>
-            </div>
-            </form></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td><form>
-            <div class="checkbox" style="text-align:center;">
-                <label><input type="checkbox" value=""></label>
-            </div>
-            </form></td>
-      </tr>
     </tbody>
   </table>
            <div class="button" style="text-align:center;">
              <button type="button" class="btn btn-info" style="margin-right:70px;">APPROVE</button>
                <button type="button" class="btn btn-info">REJECT</button>
             </div>
-        
-    </body>
- 
+
 </div>
