--- a/template/view_day_off_request(approve).html
+++ b/template/view_day_off_request(approve).html
@@ -17,23 +17,22 @@
     </thead>
     <tbody>
       <tr ng-repeat="item in listRequest">
-        <td>{{item.reason}}</td>
-        <td>{{item.date_from}}</td>
-        <td>{{item.date_to}}</td>
-        <td>{{item.u_name}}</td>
-        <td>{{item.team_name}}</td>
-          <td><form>
-            <div class="checkbox" style="text-align:center;">
-                <label><input type="checkbox" value=""></label>
-            </div>
-            </form>
+          <td ng-hide="item.status_id != 1">{{item.reason}}</td>
+          <td ng-hide="item.status_id != 1">{{item.date_from}}</td>
+          <td ng-hide="item.status_id != 1">{{item.date_to}}</td>
+          <td ng-hide="item.status_id != 1">{{item.u_name}}</td>
+          <td ng-hide="item.status_id != 1">{{item.team_name}}</td>
+          <td ng-hide="item.status_id != 1" style="text-align:center;">
+                <input type="checkbox" ng-model="selectedList[$index]">
+                <!-- <span>{{selectedList[$index]}}</span> -->
           </td>
       </tr>
     </tbody>
   </table>
-           <div class="button" style="text-align:center;">
-             <button type="button" class="btn btn-info" style="margin-right:70px;">APPROVE</button>
-               <button type="button" class="btn btn-info">REJECT</button>
-            </div>
+
+  <div class="button" style="text-align:center;">
+    <button type="button" class="btn btn-info" style="margin-right:70px;" ng-click="ApproveSubmit()">APPROVE</button>
+    <button type="button" class="btn btn-info" ng-click="RejectSubmit()">REJECT</button>
+  </div>
 
 </div>
